Refine new site content

--- a/index.html
+++ b/index.html
@@ -22,53 +22,23 @@
     <div class="background-gradient"></div>
 
     <header>
-        <nav class="container">
-            <a href="#" class="logo">
-                <img src="assets/images/logo_icon.png" alt="Nexus Group AI">
-                Nexus Group AI
-            </a>
-            <ul class="nav-links" id="navLinks">
-                <li><a href="#hero">Home</a></li>
-                <li class="dropdown">
-                    <a href="platform.html">Platform</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="platform.html#iris">IRIS</a></li>
-                        <li><a href="platform.html#features">Features</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="solutions.html">Solutions</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="solutions.html#cer">CER Directive</a></li>
-                        <li><a href="solutions.html#nis2">NIS2</a></li>
-                        <li><a href="solutions.html#dora">DORA</a></li>
-                        <li><a href="solutions.html#cera">CERA</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="resources.html">Resources</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="resources.html#situation-reports">Situation Reports</a></li>
-                        <li><a href="resources.html#case-studies">Case Studies</a></li>
-                        <li><a href="resources.html#annual-reports">Annual Reports</a></li>
-                        <li><a href="resources.html#resilience-guide">Resilience Guide</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="company.html">Company</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="company.html#about">About Us</a></li>
-                        <li><a href="company.html#leadership">Leadership Team</a></li>
-                        <li><a href="company.html#work-with-us">Work with Us</a></li>
-                        <li><a href="company.html#contact">Contact Us</a></li>
-                    </ul>
-                </li>
-                <li><a href="#contact" class="cta-nav">Book Demo</a></li>
-            </ul>
-            <div class="nav-toggle" id="navToggle">
-                <span></span>
-                <span></span>
-                <span></span>
+        <nav class="navbar">
+            <div class="nav-container">
+                <a href="index.html" class="nav-logo">
+                    NEXUS GROUP AI
+                </a>
+                <ul class="nav-links">
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="solutions.html">Solutions</a></li>
+                    <li><a href="resources.html">Resources</a></li>
+                    <li><a href="company.html">Company</a></li>
+                </ul>
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
         </nav>
     </header>
@@ -78,9 +48,9 @@
             <div id="hero-background" class="hero-background"></div>
             <div class="container">
                 <div class="hero-content" data-aos="fade-up">
-                    <h1 class="main-headline">AI-Powered Risk Intelligence for a Resilient Future</h1>
+                    <h1 class="main-headline">Navigate Uncertainty. Stay Resilient.</h1>
                     <p class="sub-headline">
-                        Empowering critical organisations with actionable intelligence to enhance resilience and ensure compliance with EU directives through our AI-Powered Risk Operating System.
+                        IRIS: Your AI-powered risk intelligence dashboard for a secure and resilient future. We empower critical decision-makers with tailored, actionable risk mitigation strategies.
                     </p>
                     <a href="#contact" class="cta-button">Book Demo</a>
                 </div>
@@ -90,7 +60,7 @@
         <section id="iris" class="container">
             <h2 data-aos="fade-up">What is IRIS?</h2>
             <p class="section-intro" data-aos="fade-up" data-aos-delay="100">
-                The <strong>Intelligence Resilience Information System (IRIS)</strong> harnesses advanced AI to protect critical infrastructure. By integrating Open Source Intelligence (OSINT) and cross-sectoral scenario modeling, IRIS provides the real-time risk intelligence you need to anticipate, mitigate, and recover from crises efficiently.
+                The <strong>Integrated Risk Intelligence System (IRIS)</strong> harnesses advanced AI to protect critical infrastructure. By integrating Open Source Intelligence (OSINT) and cross-sectoral scenario modeling, IRIS provides the real-time risk intelligence you need to anticipate, mitigate, and recover from crises efficiently.
             </p>
         </section>
 
@@ -142,24 +112,6 @@
             </div>
         </section>
 
-        <section id="product-overview" class="container">
-            <h2 data-aos="fade-up">Meet IRIS: Your AI-Powered Risk Intelligence Platform That Saves Time, Reduces Risks and Builds Trust</h2>
-            <div class="product-benefits">
-                <div class="benefit-item" data-aos="fade-right">
-                    <h3>Integrate Risk Management for Faster Resolutions</h3>
-                    <p>Unify fragmented data sources into a single risk management platform to create a holistic view of enterprise risks. Resolve threats faster, reduce potential losses, and ensure resilient, secure business operations.</p>
-                </div>
-                <div class="benefit-item" data-aos="fade-up">
-                    <h3>80% Productivity Boost—Faster Reviews, Fewer Delays</h3>
-                    <p>Automate the aggregation and analysis of up to 6 hours of manual data collection and reporting per risk assessment with the <strong>IRIS.</strong> Free up risk analysts and managers to focus on high-impact strategic threats, while providing real-time intelligence for proactive decision-making.</p>
-                </div>
-                <div class="benefit-item" data-aos="fade-left">
-                    <h3>Consistent Compliance, Stronger Customer Trust</h3>
-                    <p>Standardise risk assessment and mitigation workflows to improve accuracy, reduce oversights, and enhance auditability. Ensure a resilient, secure enterprise that builds trust with both customers, investors, and regulators.</p>
-                </div>
-            </div>
-        </section>
-
         <section id="capabilities" class="container">
             <h2 data-aos="fade-up">Why IRIS?</h2>
             <div class="capabilities-grid">
@@ -198,32 +150,6 @@
             </div>
         </section>
 
-        <section id="solutions" class="container">
-            <h2 data-aos="fade-up">Risk Intelligence Solutions</h2>
-            <p class="section-intro" data-aos="fade-up" data-aos-delay="100">
-                Nexus Group AI enhances quality and fast decision-making across sectors in the face of strategic shocks to critical infrastructure.
-            </p>
-            <div class="solutions-grid">
-                <div class="solution-card" data-aos="fade-up" data-aos-delay="100">
-                    <i class="fas fa-building"></i>
-                    <h3>Industry Solutions</h3>
-                    <p>Access tailored solutions across diverse sectors, including corporate intelligence, finance, brand safety, and national security.</p>
-                </div>
-                
-                <div class="solution-card" data-aos="fade-up" data-aos-delay="200">
-                    <i class="fas fa-user-tie"></i>
-                    <h3>Executive Solutions</h3>
-                    <p>Discover customized leadership and executive team solutions which streamline your search for role-specific resources and expertise.</p>
-                </div>
-                
-                <div class="solution-card" data-aos="fade-up" data-aos-delay="300">
-                    <i class="fas fa-shield-alt"></i>
-                    <h3>Risk Management</h3>
-                    <p>Find precise solutions for wide-ranging challenges, such as brand reputation, cyber attacks, geopolitical risks, and financial market crisis.</p>
-                </div>
-            </div>
-        </section>
-
         <section id="team" class="container">
             <h2 data-aos="fade-up">Meet the Founders</h2>
             <div class="team-grid">
@@ -247,56 +173,13 @@
         <section id="contact" class="container">
             <h2 data-aos="fade-up">Let's Build a Resilient Future</h2>
             <p class="section-intro" data-aos="fade-up" data-aos-delay="100">
-                Ready to transform your risk management strategy? Reach out to us.
+                Ready to transform your risk management strategy? Book a demo to learn more.
             </p>
         </section>
     </main>
 
     <footer>
         <div class="container">
-            <div class="footer-content">
-                <div class="footer-cta">
-                    <h3>Stay Resilient with Automated Risk Intelligence.</h3>
-                    <p>Talk to a Nexus expert</p>
-                    <a href="#contact" class="cta-button">Book Demo</a>
-                </div>
-                <div class="footer-links">
-                    <div class="footer-section">
-                        <h4>Platform</h4>
-                        <ul>
-                            <li><a href="platform.html">IRIS</a></li>
-                            <li><a href="platform.html#features">Features</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-section">
-                        <h4>Solutions</h4>
-                        <ul>
-                            <li><a href="solutions.html#cer">CER Directive</a></li>
-                            <li><a href="solutions.html#nis2">NIS2</a></li>
-                            <li><a href="solutions.html#dora">DORA</a></li>
-                            <li><a href="solutions.html#cera">CERA</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-section">
-                        <h4>Resources</h4>
-                        <ul>
-                            <li><a href="resources.html#situation-reports">Situation Reports</a></li>
-                            <li><a href="resources.html#case-studies">Case Studies</a></li>
-                            <li><a href="resources.html#annual-reports">Annual Reports</a></li>
-                            <li><a href="resources.html#resilience-guide">Resilience Guide</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-section">
-                        <h4>Company</h4>
-                        <ul>
-                            <li><a href="company.html#about">About Us</a></li>
-                            <li><a href="company.html#leadership">Leadership Team</a></li>
-                            <li><a href="company.html#work-with-us">Work with Us</a></li>
-                            <li><a href="company.html#contact">Contact Us</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 Nexus Group AI. All Rights Reserved.</p>
                 <div class="legal-links">
