--- a/resources.html
+++ b/resources.html
@@ -19,53 +19,23 @@
     <div class="background-gradient"></div>
 
     <header>
-        <nav class="container">
-            <a href="index.html" class="logo">
-                <img src="assets/images/logo_icon.png" alt="Nexus Group AI">
-                Nexus Group AI
-            </a>
-            <ul class="nav-links" id="navLinks">
-                <li><a href="index.html">Home</a></li>
-                <li class="dropdown">
-                    <a href="platform.html">Platform</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="platform.html#iris">IRIS</a></li>
-                        <li><a href="platform.html#features">Features</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="solutions.html">Solutions</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="solutions.html#cer">CER Directive</a></li>
-                        <li><a href="solutions.html#nis2">NIS2</a></li>
-                        <li><a href="solutions.html#dora">DORA</a></li>
-                        <li><a href="solutions.html#cera">CERA</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown active">
-                    <a href="resources.html">Resources</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#situation-reports">Situation Reports</a></li>
-                        <li><a href="#case-studies">Case Studies</a></li>
-                        <li><a href="#annual-reports">Annual Reports</a></li>
-                        <li><a href="#resilience-guide">Resilience Guide</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="company.html">Company</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="company.html#about">About Us</a></li>
-                        <li><a href="company.html#leadership">Leadership Team</a></li>
-                        <li><a href="company.html#work-with-us">Work with Us</a></li>
-                        <li><a href="company.html#contact">Contact Us</a></li>
-                    </ul>
-                </li>
-                <li><a href="#contact" class="cta-nav">Book Demo</a></li>
-            </ul>
-            <div class="nav-toggle" id="navToggle">
-                <span></span>
-                <span></span>
-                <span></span>
+        <nav class="navbar">
+            <div class="nav-container">
+                <a href="index.html" class="nav-logo">
+                    NEXUS GROUP AI
+                </a>
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="solutions.html">Solutions</a></li>
+                    <li><a href="resources.html" class="active">Resources</a></li>
+                    <li><a href="company.html">Company</a></li>
+                </ul>
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
         </nav>
     </header>
@@ -314,49 +284,6 @@
 
     <footer>
         <div class="container">
-            <div class="footer-content">
-                <div class="footer-cta">
-                    <h3>Stay Resilient with Automated Risk Intelligence.</h3>
-                    <p>Talk to a Nexus expert</p>
-                    <a href="#contact" class="cta-button">Book Demo</a>
-                </div>
-                <div class="footer-links">
-                    <div class="footer-section">
-                        <h4>Platform</h4>
-                        <ul>
-                            <li><a href="platform.html">IRIS</a></li>
-                            <li><a href="platform.html#features">Features</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-section">
-                        <h4>Solutions</h4>
-                        <ul>
-                            <li><a href="solutions.html#cer">CER Directive</a></li>
-                            <li><a href="solutions.html#nis2">NIS2</a></li>
-                            <li><a href="solutions.html#dora">DORA</a></li>
-                            <li><a href="solutions.html#cera">CERA</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-section">
-                        <h4>Resources</h4>
-                        <ul>
-                            <li><a href="#situation-reports">Situation Reports</a></li>
-                            <li><a href="#case-studies">Case Studies</a></li>
-                            <li><a href="#annual-reports">Annual Reports</a></li>
-                            <li><a href="#resilience-guide">Resilience Guide</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-section">
-                        <h4>Company</h4>
-                        <ul>
-                            <li><a href="company.html#about">About Us</a></li>
-                            <li><a href="company.html#leadership">Leadership Team</a></li>
-                            <li><a href="company.html#work-with-us">Work with Us</a></li>
-                            <li><a href="company.html#contact">Contact Us</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 Nexus Group AI. All Rights Reserved.</p>
                 <div class="legal-links">
