--- a/company.html
+++ b/company.html
@@ -19,53 +19,23 @@
     <div class="background-gradient"></div>
 
     <header>
-        <nav class="container">
-            <a href="index.html" class="logo">
-                <img src="assets/images/logo_icon.png" alt="Nexus Group AI">
-                Nexus Group AI
-            </a>
-            <ul class="nav-links" id="navLinks">
-                <li><a href="index.html">Home</a></li>
-                <li class="dropdown">
-                    <a href="platform.html">Platform</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="platform.html#iris">IRIS</a></li>
-                        <li><a href="platform.html#features">Features</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="solutions.html">Solutions</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="solutions.html#cer">CER Directive</a></li>
-                        <li><a href="solutions.html#nis2">NIS2</a></li>
-                        <li><a href="solutions.html#dora">DORA</a></li>
-                        <li><a href="solutions.html#cera">CERA</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="resources.html">Resources</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="resources.html#situation-reports">Situation Reports</a></li>
-                        <li><a href="resources.html#case-studies">Case Studies</a></li>
-                        <li><a href="resources.html#annual-reports">Annual Reports</a></li>
-                        <li><a href="resources.html#resilience-guide">Resilience Guide</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown active">
-                    <a href="company.html">Company</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#about">About Us</a></li>
-                        <li><a href="#leadership">Leadership Team</a></li>
-                        <li><a href="#work-with-us">Work with Us</a></li>
-                        <li><a href="#contact">Contact Us</a></li>
-                    </ul>
-                </li>
-                <li><a href="#contact" class="cta-nav">Book Demo</a></li>
-            </ul>
-            <div class="nav-toggle" id="navToggle">
-                <span></span>
-                <span></span>
-                <span></span>
+        <nav class="navbar">
+            <div class="nav-container">
+                <a href="index.html" class="nav-logo">
+                    NEXUS GROUP AI
+                </a>
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="solutions.html">Solutions</a></li>
+                    <li><a href="resources.html">Resources</a></li>
+                    <li><a href="company.html" class="active">Company</a></li>
+                </ul>
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
         </nav>
     </header>
@@ -147,15 +117,18 @@
             <div class="team-grid">
                 <div class="team-member-card" data-aos="fade-right">
                     <div class="team-image">
-                        <img src="assets/images/company/andrei-cursaru.png" alt="Andrei I. Cursaru" />
+                        <img src="assets/images/company/andrei-cursaru.png" alt="Andrei Cursaru" />
                     </div>
                     <div class="team-info">
-                        <h3>Andrei I. Cursaru</h3>
+                        <h3>Andrei Cursaru</h3>
                         <span>Founder & CEO</span>
                         <p>With extensive security and defense experience at NATO and the EU, Andrei leverages strategic foresight to develop AI solutions that preempt emerging threats.</p>
                     </div>
                 </div>
                 <div class="team-member-card" data-aos="fade-left">
+                    <div class="team-image">
+                        <img src="assets/images/company/orion-forowycz.png" alt="Orion Forowycz" />
+                    </div>
                     <div class="team-info">
                         <h3>Orion Forowycz</h3>
                         <span>Co-Founder & CTO</span>
@@ -169,7 +142,6 @@
             <h2 data-aos="fade-up">Work With Us</h2>
             <div class="work-content" data-aos="fade-up" data-aos-delay="100">
                 <p>Join us in our mission to build a more resilient world. We're looking for passionate, innovative, and driven individuals to help us push the boundaries of AI and deliver transformative solutions. Come be a part of a team that's shaping the future of risk intelligence and strategic decision-making.</p>
-                <a href="#contact" class="cta-button">See Open Positions</a>
             </div>
         </section>
 
@@ -177,73 +149,12 @@
             <h2 data-aos="fade-up">Our Ethical AI Pledge</h2>
             <div class="ethical-content" data-aos="fade-up" data-aos-delay="100">
                 <p>At Nexus Group AI, our commitment to ethics is non-negotiable. We believe that AI must be developed and deployed responsibly to ensure it benefits all of humanity. Our ethical pledge outlines our unwavering dedication to transparency, fairness, and accountability in every solution we create.</p>
-                <a href="#" class="cta-button">Learn More</a>
-            </div>
-        </section>
-
-        <section id="contact" class="contact container">
-            <h2 data-aos="fade-up">Contact Us</h2>
-            <p class="section-intro" data-aos="fade-up" data-aos-delay="100">
-                Ready to transform your risk management strategy? Reach out to us.
-            </p>
-            <div class="contact-info" data-aos="fade-up" data-aos-delay="200">
-                <div class="contact-item">
-                    <i class="fas fa-envelope"></i>
-                    <span>info@nexus-group.ai</span>
-                </div>
-                <div class="contact-item">
-                    <i class="fas fa-phone"></i>
-                    <span>+43 660 8066561</span>
-                </div>
             </div>
         </section>
     </main>
 
     <footer>
         <div class="container">
-            <div class="footer-content">
-                <div class="footer-cta">
-                    <h3>Stay Resilient with Automated Risk Intelligence.</h3>
-                    <p>Talk to a Nexus expert</p>
-                    <a href="#contact" class="cta-button">Book Demo</a>
-                </div>
-                <div class="footer-links">
-                    <div class="footer-section">
-                        <h4>Platform</h4>
-                        <ul>
-                            <li><a href="platform.html">IRIS</a></li>
-                            <li><a href="platform.html#features">Features</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-section">
-                        <h4>Solutions</h4>
-                        <ul>
-                            <li><a href="solutions.html#cer">CER Directive</a></li>
-                            <li><a href="solutions.html#nis2">NIS2</a></li>
-                            <li><a href="solutions.html#dora">DORA</a></li>
-                            <li><a href="solutions.html#cera">CERA</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-section">
-                        <h4>Resources</h4>
-                        <ul>
-                            <li><a href="resources.html#situation-reports">Situation Reports</a></li>
-                            <li><a href="resources.html#case-studies">Case Studies</a></li>
-                            <li><a href="resources.html#annual-reports">Annual Reports</a></li>
-                            <li><a href="resources.html#resilience-guide">Resilience Guide</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-section">
-                        <h4>Company</h4>
-                        <ul>
-                            <li><a href="#about">About Us</a></li>
-                            <li><a href="#leadership">Leadership Team</a></li>
-                            <li><a href="#work-with-us">Work with Us</a></li>
-                            <li><a href="#contact">Contact Us</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 Nexus Group AI. All Rights Reserved.</p>
                 <div class="legal-links">
