--- a/imprint.html
+++ b/imprint.html
@@ -16,18 +16,24 @@
     <div class="background-gradient"></div>
 
     <header>
-        <nav class="container">
-            <a href="index.html" class="logo">
-                <img src="assets/images/logo_icon.png" alt="Nexus Group AI">
-                Nexus Group AI
-            </a>
-            <ul class="nav-links" id="navLinks">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="platform.html">Platform</a></li>
-                <li><a href="solutions.html">Solutions</a></li>
-                <li><a href="resources.html">Resources</a></li>
-                <li><a href="company.html">Company</a></li>
-            </ul>
+        <nav class="navbar">
+            <div class="nav-container">
+                <a href="index.html" class="nav-logo">
+                    NEXUS GROUP AI
+                </a>
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="solutions.html">Solutions</a></li>
+                    <li><a href="resources.html">Resources</a></li>
+                    <li><a href="company.html">Company</a></li>
+                </ul>
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
         </nav>
     </header>
 
